[metadata]
name = rewriteflow
version = 0.1.0
description = A tool for deploying Lua scripts with webhooks and flow management
long_description = file: README.md
long_description_content_type = text/markdown
author = dragsbruh
author_email = dragsbruh@gmail.com
url = https://github.com/dragsbruh/rewriteflow
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
package_dir =
    = src

[options.entry_points]
console_scripts =
    rflow = main:cli

[options.package_data]
* =
    *.txt
    *.md
